--- a/index.html
+++ b/index.html
@@ -5,36 +5,12 @@
     <meta name="keywords" content="quotes, quote, life, lessons, encouragement, mindfulness, meditation, demonstration, demo">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🌹 Quote Viewer 🌹</title>
+    <title>QuoteGoats 🐐</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="display">
     <nav><p id="brand">QuoteGoats 🐐</p></nav>
-    <div class="hero-card" id="1">
-        <h1 class="quote-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aliquid nam rerum, 
-            doloremque iste laboriosam praesentium cum natus voluptatum</h1>
-            <h3 class="quote-author">~ lorem ipsum ~</h3>
-    </div>
-    <div class="hero-card" id="2">
-        <h1 class="quote-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aliquid nam rerum, 
-            doloremque iste laboriosam praesentium cum natus voluptatum</h1>
-            <h3 class="quote-author">~ lorem ipsum ~</h3>
-    </div>
-    <div class="hero-card" id="3">
-        <h1 class="quote-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aliquid nam rerum, 
-            doloremque iste laboriosam praesentium cum natus voluptatum</h1>
-            <h3 class="quote-author">~ lorem ipsum ~</h3>
-    </div>
-    <div class="hero-card" id="4">
-        <h1 class="quote-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aliquid nam rerum, 
-            doloremque iste laboriosam praesentium cum natus voluptatum</h1>
-            <h3 class="quote-author">~ lorem ipsum ~</h3>
-    </div>
-    <div class="hero-card" id="5">
-        <h1 class="quote-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aliquid nam rerum, 
-            doloremque iste laboriosam praesentium cum natus voluptatum</h1>
-            <h3 class="quote-author">~ lorem ipsum ~</h3>
-    </div>
+    <div id="quoteBlocks"></div>
     
 <footer>
     <p><small>&copy; 2024 </small><em>Wides🎸</em></p>
